# Growing_Neural_Networks

./: .gitignore  README.md  main.py  setup.cfg
experiments/: perfromance.py  teacher.py  ts_baseline_main.py  ts_config.yaml  ts_dataset.py  ts_student_main.py
nng/: __init__.py  analysis_utils.py  dataloader.py  growingneuralnetwork.py  train.py
nng/cfg/: __init__.py
nng/cfg/final/: ReadMe.md
nng/cfg/final/fashion_mnist_small/: run.sh
nng/cfg/final/mnist_small/: run.sh
nng/cfg/final/mnist_trigger/Trigger/: long_250.yaml  long_big_250.yaml  run.sh  trigger_config.yaml
nng/cfg/final/mnist_trigger/Trigger_auto/: best_parctice_sota2.yaml  best_practice_sota1.yaml  nng_bestpr_efctdimH.yaml  nng_bestpr_efctdimW.yaml  nng_bestpr_orthogH.yaml  nng_bestpr_orthogW.yaml  smal_sota.yaml  xhuge_sota.yaml
nng/cfg/final/mnist_trigger/Trigger_auto2/: nng_bestpr_efctdimH+L.yaml  nng_bestpr_efctdimW+L.yaml  nng_bestpr_orthogH+L.yaml  (+1 more)
nng/cfg/milestone2/: autogrow_how_adam_init.yaml  autogrow_how_gau_init.yaml  autogrow_how_uni_init.yaml  autogrow_how_zero_init.yaml  big_defualt.yaml  big_growing_defualt.yaml  big_notgrowing_defualt.yaml  grandmax_how.yaml  idempotent_grow_baseline.yaml  random_grow_baseline.yaml  random_grow_baseline_flops.yaml  small_default.yaml
nng/grow/: howtogrow.py  layers.py  models.py  modeltransformer.py  whentogrow.py  wheretogrow.py
test/: test_dataloader.py  test_growingneuralnetwork.py  test_train.py
test/grow/: test_howtogrow.py  test_layers.py  test_models.py  test_modeltransformer.py  test_whentogrow.py  test_wheretogrow.py
(+350 files in other folders)
