[metadata]
name = growing_neural_network
version = attr: nng.__version__.__version__
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.tu-berlin.de/david_leiting/ds-project.git

[options]
packages = find:
python_requires = >=3.8
install_requires =
    tensorflow>=2.9.1,<3.0.0
    tensorflow_datasets>=4.5.2,<5.0.0
    wandb>=0.12.16,<1.0.0
    scipy>=1.8.1,<2.0.0
    numpy>=1.22.3,<2.0.0
    matplotlib>=3.5.2,<4.0.0
    PyYAML==6.0
    scikit-learn>=1.1.1,<2.0.0
    seaborn>=0.11.2,<1.0.0
    plotly>=5.8.2,<6.0.0

[options.entry_points]
console_scripts =
    growing_neural_network = main:main